2003-06-26  Mikael Hallendal  <micke@imendio.com>

        * Released 0.10
        * configure.in: Changed version to 0.10
	* NEWS: Added 0.10 news.
	
2003-06-25  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Bumped to 0.9.1
	* loudmouth.spec.in: Changed the URL to the project site.

2003-06-24  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c:
	* loudmouth/lm-sha.c: 
	* loudmouth/test-lm.c:
	- Submitted patch that makes Loudmouth work and build on Win32.
	  Patch sent by Vince Negri, thanks a lot.

2003-06-15  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-message.c:
	* loudmouth/lm-message.h:
	(lm_message_get_sub_type): Return LmMessageSubType.
	  Found by Alexander Saltanov

2003-06-13  Mikael Hallendal  <micke@imendio.com>

	* AUTHORS: updated contact information
	* README: updated contact information
	* loudmouth/*.[ch]: updated email address
	* loudmouth/lm-message-node.c: don't lower case the XML
	* loudmouth/lm-message.c:
	(message_type_from_string): use strcmp rather than strcasecmp
	* loudmouth/lm-parser.c: 
	(parser_start_node_cb),
	(parser_end_node_cb), 
	(lm_parser_new): use strcmp instead of strcasecmp

2003-06-11  Mikael Hallendal  <micke@codefactory.se>

	* docs/reference/loudmouth-sections.txt: Added new functions

	* loudmouth/lm-message-node.c: 
	(_lm_message_node_new): Set node->raw_mode = FALSE.
	(lm_message_node_get_raw_mode): Added
	(lm_message_node_set_raw_mode): Added
	(lm_message_node_to_string): Don't escape if raw_mode == TRUE
	
	* loudmouth/lm-message-node.h: Added new functions.

2003-04-26  Mikael Hallendal  <micke@codefactory.se>

        * loudmouth.spec.in: Enable gtk-doc
 
        * Released 0.9.1

2003-04-17  Mikael Hallendal  <micke@codefactory.se>

	* docs/reference/Makefile.am: Make --disable-gtk-doc not try to 
	  install the documents :) Fixes #633, patch by Kevin Dougherty.
	
	* loudmouth/lm-debug.c: Make build work with --disable-debug, 
	  fixes #634, patch by Kevin Dougherty.
