@@ -1,3 +1,8 @@
+2003-07-07  Mikael Hallendal  <micke@imendio.com>
+
+	* loudmouth/lm-connection.c: moved the includes around a bit so that 
+	  it builds on FreeBSD without problems.
+
 2003-06-26  Mikael Hallendal  <micke@imendio.com>
 
         * Released 0.10
